--- a/app/src/main/res/layout/register_enter_pin.xml
+++ b/app/src/main/res/layout/register_enter_pin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E9ECF0"
+    android:background="@color/layout_background"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
@@ -144,7 +144,6 @@
             android:text="00:59"
             android:textColor="@color/blue" />
     </androidx.appcompat.widget.LinearLayoutCompat>
-
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
