--- a/app/src/main/res/layout/register_enter_pin.xml
+++ b/app/src/main/res/layout/register_enter_pin.xml
@@ -18,8 +18,6 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +26,9 @@
         app:layout_constraintVertical_bias="0.3">
 
         <com.google.android.material.card.MaterialCardView
+            android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
+            app:cardElevation="16dp"
             android:layout_height="wrap_content"
             app:cardCornerRadius="32dp">
 
