--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
     <color name="light_gray">#6A6C69</color>
     <color name="very_light_gray">#A2A3A1</color>
     <color name="blue">#006EFF</color>
-    <color name="yellow">#EAD72E</color>
+    <color name="yellow">#FED500</color>
     <color name="layout_background">#E9ECF0</color>
 </resources>
