--- a/app/src/main/res/drawable/image_back_border.xml
+++ b/app/src/main/res/drawable/image_back_border.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="#E3474747" android:width="1dp"/>
-    <corners android:radius="16dp"/>
-    <solid android:color="@color/layout_background"/>
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/layout_background">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/layout_background" />
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+    <item android:id="@android:id/background">
+        <shape android:shape="rectangle">
+            <stroke
+                android:width="1dp"
+                android:color="#E3474747" />
+            <corners android:radius="16dp" />
+            <solid android:color="@color/layout_background" />
+        </shape>
+    </item>
+</ripple>
