--- a/app/src/main/res/drawable/text_back_border.xml
+++ b/app/src/main/res/drawable/text_back_border.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/blue" android:width="1dp"/>
-    <corners android:radius="16dp"/>
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/blue">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <stroke
+                android:width="1dp"
+                android:color="@color/blue" />
+            <solid android:color="@color/blue"/>
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+    <item android:id="@android:id/background">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <stroke
+                android:width="1dp"
+                android:color="@color/blue" />
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+</ripple>
+
