--- a/app/src/main/res/layout/service_top_item.xml
+++ b/app/src/main/res/layout/service_top_item.xml
@@ -7,6 +7,9 @@
     android:layout_marginHorizontal="8dp"
     android:layout_height="80dp">
     <FrameLayout
+        android:id="@+id/service_top_item"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="@drawable/image_back_border">
