--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -5,7 +5,7 @@
         android:radius="@dimen/_50sdp"
         />
     <solid
-        android:color="#F2F6EF"
+        android:color="#E9ECF0"
         />
 
 
