--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -3,12 +3,15 @@
     android:shape="rectangle">
     <corners
 
-        android:radius="10dp"
+        android:radius="16dp"
         />
 
     <stroke
         android:width="1dp"
-        android:color="@color/light_gray"
+        android:color="@color/very_light_gray"
         />
 
+    <solid
+        android:color="#ffffffff"
+        />
 </shape>
