--- a/app/src/main/res/layout/activity_name_app.xml
+++ b/app/src/main/res/layout/activity_name_app.xml
@@ -18,7 +18,7 @@
 
     <ImageView
         android:layout_marginTop="@dimen/_60sdp"
-        android:src="@drawable/name_app_image"
+        android:src="@drawable/g9"
         android:layout_width="@dimen/_180sdp"
         android:layout_height="@dimen/_180sdp"
 
