--- a/app/src/main/res/layout/activity_on_board_intro.xml
+++ b/app/src/main/res/layout/activity_on_board_intro.xml
@@ -23,13 +23,11 @@
         android:layout_width="342dp"
         android:layout_height="411dp"
         android:layout_marginTop="92dp"
-        android:layout_marginEnd="36"
+        android:layout_marginEnd="36dp"
         android:layout_marginRight="@dimen/_30sdp"
         android:layout_marginLeft="@dimen/_30sdp"
         android:src="@drawable/group32"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toEndOf="parent"
-        app:layout_constraintLeft_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
