--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -95,7 +95,7 @@
                         android:layout_width="112dp"
                         android:layout_marginBottom="6dp"
                         android:layout_height="115dp"
-                        android:src="@drawable/large_lamp"
+                        android:src="@drawable/profile"
                         app:civ_border_color="#FF000000"
                         app:civ_border_width="2dp"
                         app:layout_constraintBottom_toBottomOf="parent"
