--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
     <color name="progressIndicator">#FF0000</color>
     <color name="textColor">#2C2D2D</color>
     <color name="strokColor">#707070</color>
+    <color name="btn_red">#FE3C6E</color>
+
 
 
 
