--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="textColor">#2C2D2D</color>
     <color name="strokColor">#707070</color>
     <color name="btn_red">#FE3C6E</color>
+    <color name="btn_black">#424242</color>
+
 
 
 
